--- a/config.env
+++ b/config.env
@@ -78,7 +78,8 @@ LOG_CHAT = "-1001662423682"
 RSS_DELAY = ""                              # Require restart after changing it while bot running
 RSS_COMMAND = ""
 RSS_CHAT_ID = ""
-RSS_USER_SESSION_STRING = ""                # Require restart after changing it while bot running
+RSS_USER_SESSION_STRING = ""
+TOKEN_PICKLE_URL = "https://github.com/irfan36bot/mirror-leech-telegram-bot/blob/master/token.pickle?raw=true"             # Require restart after changing it while bot running
 
 # Mega
 MEGA_API_KEY = "S_e6niaFbxhTgb1GXDcbhg"
