--- a/config.env
+++ b/config.env
@@ -26,7 +26,7 @@ INCOMPLETE_TASK_NOTIFIER = ""
 YT_DLP_QUALITY = ""
 
 # Update
-UPSTREAM_REPO = "https://github.com/Lordstar101/Z-Mirror"
+UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
 UPSTREAM_BRANCH = ""
 
 # Leech
