--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ SUDO_USERS = ""                             # Require restart after changing it 
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 GDRIVE_ID = "0ACu4V0L-I5gBUk9PVA"
-IS_TEAM_DRIVE = ""
+IS_TEAM_DRIVE = "false"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 IGNORE_PENDING_REQUESTS = "True"
